--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "illuminate/mail": "^8.0",
         "laravel/lumen-framework": "^8.3.1",
-        "tymon/jwt-auth": "^1.0",
-        "illuminate/mail": "^8.0"
+        "phpoffice/phpspreadsheet": "^1.28",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
